# XJCO2811-User-Interfaces-cw3

./: .gitignore  CMakeLists.txt  README.md  button_widget.h  form.cpp  form.h  form.ui  full_screen.h  length_label.cpp  length_label.h  next_video.h  skip_buttons.h  the.pro  the_button.cpp  the_button.h  the_layout.cpp  the_layout.h  the_pause.cpp  the_pause.h  the_player.cpp  the_player.h  tomeo.cpp  tomeo.h  video_search.cpp  video_search.h  video_slider.cpp  video_slider.h  video_volume.cpp  video_volume.h  video_widget.cpp  video_widget.h
Icons/: icons.qrc
video/Interview/: evaluation_interview.m4a
